# roesti

./: .clang-format  CMakeLists.txt  README.md  imgui.ini
cmake/: pybind11.cmake  saf.cmake  torch.cmake
python/: CMakeLists.txt  bindings.cpp  pytestbench.py
roesti/: CMakeLists.txt
roesti/include/: macros.cuh  rasterizer.cuh  roesti.hpp  utils.cuh
roesti/src/: rasterizer.cu
testbench/: CMakeLists.txt  cuda_measurable_event.cu  cuda_measurable_event.cuh  kernels.cu  kernels.cuh  main.cpp
